@@ -1,3 +1,13 @@
+2009-12-04  Kent Hansen  <kent.hansen@nokia.com>
+
+        Reviewed by Darin Adler.
+
+        JavaScript delete operator should return false for string properties
+        https://bugs.webkit.org/show_bug.cgi?id=32012
+
+        * runtime/StringObject.cpp:
+        (JSC::StringObject::deleteProperty):
+
 2009-12-03  Drew Wilson  <atwilson@chromium.org>
 
         Rolled back r51633 because it causes a perf regression in Chromium.
